package com.zipcodewilmington.froilansfarm.Animals;

import com.zipcodewilmington.froilansfarm.EdiblePackage.Edible;
import com.zipcodewilmington.froilansfarm.Produce;

public class Chicken extends Animal implements Produce {
    public void eat(Edible obj) {

    }

    public String makeNoise() {
        return null;
    }

    public void addProduce(Produce produce) {

    }
}
