package com.zipcodewilmington.froilansfarm.Crops;

import com.zipcodewilmington.froilansfarm.EdiblePackage.Apple;

public class AppleTrees extends Crop<Apple> {
}
