package com.zipcodewilmington.froilansfarm.Crops;

import com.zipcodewilmington.froilansfarm.EdiblePackage.SoyBean;

public class BeanStalk extends Crop<SoyBean> {
}
