package com.zipcodewilmington.froilansfarm;

import com.zipcodewilmington.froilansfarm.EdiblePackage.Edible;

public interface Eater {
    void eat(Edible obj);
}
