package com.zipcodewilmington.froilansfarm.EdiblePackage;

public class Apple implements HorseFood{
}
