package com.zipcodewilmington.froilansfarm.EdiblePackage;

public class EarCorn implements HorseFood, ChickenFood {
}
