package com.zipcodewilmington.froilansfarm.EdiblePackage;

public interface Edible {

}
