package com.zipcodewilmington.froilansfarm.EdiblePackage;

public interface HorseFood extends EdiblePlant{

}
