package com.zipcodewilmington.froilansfarm.EdiblePackage;

public class Pumpkin implements EdiblePlant{
}
