package com.zipcodewilmington.froilansfarm.EdiblePackage;

public class SoyBean implements ChickenFood{
}
