package com.zipcodewilmington.froilansfarm.EdiblePackage;

public class Tomato implements EdiblePlant{
}
