package com.zipcodewilmington.froilansfarm;

public interface LivingThing {
}
