package com.zipcodewilmington.froilansfarm.Persons;

public interface Botanist extends Person {
}
