package com.zipcodewilmington.froilansfarm.Persons;

import com.zipcodewilmington.froilansfarm.EdiblePackage.Edible;

public class Farmer implements Rider, Botanist {
    public void eat(Edible obj) {

    }

    public String makeNoise() {
        return null;
    }
}
