package com.zipcodewilmington.froilansfarm.Persons;

import com.zipcodewilmington.froilansfarm.EdiblePackage.Edible;

public class Pilot implements Rider{
    public void eat(Edible obj) {

    }

    public String makeNoise() {
        return null;
    }
}
