package com.zipcodewilmington.froilansfarm.Persons;

public interface Rider extends Person {
}
