package com.zipcodewilmington.froilansfarm;

import com.zipcodewilmington.froilansfarm.Persons.Rider;

public interface Rideable {
    boolean isMounted(Rider obj);
}
