package com.zipcodewilmington.froilansfarm.Vehicles;

public class CropDuster extends Aircraft{
}
