package com.zipcodewilmington.froilansfarm.Vehicles;

public class Tractor extends FarmVehicle{
}
